# CalculatingCorrectionProcedure

./: .gitignore  2022-03-23-18-09-56.csv  README.en.md  README.md  build.bat  config.txt  configure  makefile  pyproject.toml  口算结果.csv
src/: ImageData.py  Main.py  MainWindow.py  MainWindow_.py  MainWindow_rc.py  SettingMenu.py  Tools.py  Update.py  Updater.py  Values.py  __init__.py  image.db  学生1-2022-03-25-18-34-11.csv  符号.txt
src/save/: dec79120-b33b-4bee-9a17-e07d5f6701a9-2022-03-29-18-18-28.csv  学生1.csv
src/ui/: MainWindow.py  SettingMenu.py  __init__.py
ui/: MainWindow.qrc  MainWindow.ui  SettingMenu.ui
