[project]
name = "calculating-correction-procedure"
version = "0.1.0"
description = ""
authors = [
    {name = "bootmgr"}
]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pyside6 (>=6.10.2,<7.0.0)",
    "pyinstaller (>=6.19.0,<7.0.0)",
    "py7zr (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)"
]
